--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,59 +14,36 @@ jobs:
 
     steps:
       - name: Assign Issue Creator
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            await octokit.rest.issues.addAssignees({
-              owner: ${{ github.repository_owner }},
-              repo: ${{ github.repository }},
-              issue_number: context.payload.issue.number,
-              assignees: [context.actor],
-            });
+        run: |
+          ISSUE_NUMBER=$(jq -r '.issue.number' $GITHUB_EVENT_PATH)
+          ISSUE_CREATOR=$(jq -r '.issue.user.login' $GITHUB_EVENT_PATH)
+          
+          # Assign the issue creator as an assignee
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d "{\"assignees\":[\"$ISSUE_CREATOR\"]}" \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$ISSUE_NUMBER/assignees"
 
       - name: Add Issue to 'DUMMY PROJECT' Project
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data: projects } = await octokit.rest.projects.listForRepo({
-              owner: ${{ github.repository_owner }},
-              repo: ${{ github.repository }},
-            });
-            if (projects.length > 0) {
-              const dummyProject = projects.find(project => project.name === 'DUMMY PROJECT');
-              if (dummyProject) {
-                await octokit.rest.projects.createCard({
-                  column_id: dummyProject.columns[0].id, // Assuming the first column in the project.
-                  content_id: context.payload.issue.id,
-                  content_type: 'Issue',
-                });
-              }
-            }
+        run: |
+          PROJECT_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/projects" | jq '.[] | select(.name == "DUMMY PROJECT").id')
+          COLUMN_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/projects/$PROJECT_ID/columns" | jq '.[0].id')
+          ISSUE_NUMBER=$(jq -r '.issue.number' $GITHUB_EVENT_PATH)
+          
+          # Add the issue to the 'DUMMY PROJECT' project
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d "{\"content_id\":$ISSUE_NUMBER,\"content_type\":\"Issue\"}" \
+            "https://api.github.com/projects/columns/$COLUMN_ID/cards"
 
       - name: Move Issue to 'In Progress' Column
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data: projects } = await octokit.rest.projects.listForRepo({
-              owner: ${{ github.repository_owner }},
-              repo: ${{ github.repository }},
-            });
-            if (projects.length > 0) {
-              const kanbanProject = projects.find(project => project.name === 'KANBAN');
-              if (kanbanProject) {
-                const columns = await octokit.rest.projects.listColumns({
-                  project_id: kanbanProject.id,
-                });
-                const inProgressColumn = columns.find(column => column.name === 'In Progress');
-                if (inProgressColumn) {
-                  await octokit.rest.projects.createCard({
-                    column_id: inProgressColumn.id,
-                    content_id: context.payload.issue.id,
-                    content_type: 'Issue',
-                  });
-                }
-              }
-            }
+        run: |
+          PROJECT_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/projects" | jq '.[] | select(.name == "KANBAN").id')
+          COLUMN_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/projects/$PROJECT_ID/columns" | jq '.[] | select(.name == "In Progress").id')
+          ISSUE_NUMBER=$(jq -r '.issue.number' $GITHUB_EVENT_PATH)
+          
+          # Move the issue to the 'In Progress' column
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d "{\"content_id\":$ISSUE_NUMBER,\"content_type\":\"Issue\"}" \
+            "https://api.github.com/projects/columns/$COLUMN_ID/cards"
